--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -42,7 +42,7 @@ Past community participation in Outreachy
 	<p>This community currently has no approved coordinator. Coordinators approve mentored projects, and communicate with both mentors and Outreachy organizers. The full list of coordinator duties can be found on <a href="/mentor/">here</a>.
 {% endif %}
 
-{% if participation_info.approval_status == participation_info.APPROVED %}
+{% if participation_info.approval_status == participation_info.APPROVED and not participation_info.participating_round.has_late_application_deadline_passed %}
 	<h2>Promoting {{ community.name }} to Outreachy applicants</h2>
 	<p>After the Outreachy round opens on {{ current_round.appsopen }}, you can promote this community to applicants by linking to the community landing page:</p>
 
@@ -82,10 +82,10 @@ Past community participation in Outreachy
 
 	{% if approved_projects %}
 		<h2>Approved Intern Project Proposals</h2>
-		<p>These intern project proposals have been approved to be listed on the community landing page.
+		<p>These intern project proposals have been approved to be listed on the community landing page. Co-mentors can sign up on the linked pages.
 		{% if not current_round.has_project_submission_and_approval_deadline_passed %}
 			Mentors are encouraged to start promoting their project proposals as soon as the Outreachy round opens on {{ current_round.appsopen }}.</p>
-		{% else %}
+		{% elif not current_round.has_late_application_deadline_passed %}
 			Mentors are encouraged to make sure applicants record their contributions and submit a final application before the project application deadline.</p>
 		{% endif %}
 		<ul>
