--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -81,6 +81,7 @@
             @import "node_modules/bootstrap/scss/badge";
             @import "node_modules/bootstrap/scss/utilities";
             @import "node_modules/bootstrap/scss/print";
+            @import "node_modules/bootstrap/scss/images";
 
             // Custom rules for this site
 
