--- a/home/templates/home/alums.html
+++ b/home/templates/home/alums.html
@@ -84,7 +84,7 @@ Outreachy Alums
 		{% endifchanged %}
 		<div class="card-body">
 			{% if intern.picture %}
-				<img src="{{ intern.picture.file.url }}" class="img-thumbnail float-left mr-3" height="200" alt="Photo of {{ intern.name }}">
+				<img src="{{ intern.picture.file.url }}" class="img-thumbnail float-left mr-3" height="200" width="200" alt="Photo of {{ intern.name }}">
 			{% endif %}
 			<div class="card-text">
 				<h4 class="mt-0">
