--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -125,6 +125,14 @@ you can send an email to the announcements mailing list to remind applicants of 
 
 <p><a href="{% url 'email-intern-welcome' %}"><input class="btn btn-success" value="Intern Welcome Email" /></a>
 
+<p>Late in the week the interns start, send an email to mentors to double check whether their intern has actually started:
+<ul>
+	<li>After the interns are announced. Send the email after {{ current_round.internstarts }}.</li>
+</ul>
+</p>
+
+<p><a href="{% url 'email-mentor-intern-start-reminder' %}"><input class="btn btn-success" value="Mentor First Payment Email" /></a>
+
 <hr>
 <h2>Intern Selection</h2>
 
