Add Outreachy privacy policy and link to it in all forms which collect personal information.

--- a/contacts/templates/contact_form/contact_mentors.html
+++ b/contacts/templates/contact_form/contact_mentors.html
@@ -8,6 +8,8 @@ Contact Outreachy mentors
 
 <p>Please contact Outreachy mentors for general applicant questions, such as which project to choose or if you are having a hard time contacting a mentor.</p>
 
+{% include "home/snippet/privacy_policy.html" %}
+
 <form method="post" action="">
 {% csrf_token %}
 
