--- a/home/templates/home/eligibility_wizard_contractor_info.html
+++ b/home/templates/home/eligibility_wizard_contractor_info.html
@@ -6,6 +6,9 @@ Are you eligible to apply to Outreachy?
 
 {% block content %}
 <h1>Outreachy Eligibility Checking</h1>
+
+{% include "home/snippet/privacy_policy.html" %}
+
 <p>
 If you are a self-employed contractor who owns their own business, hours spent on business development and marketing count for the number of hours spent on your contracting business in the equestion below.
 </p>
