--- a/home/templates/home/eligibility_wizard_employment_info.html
+++ b/home/templates/home/eligibility_wizard_employment_info.html
@@ -6,6 +6,9 @@ Are you eligible to apply to Outreachy?
 
 {% block content %}
 <h1>Outreachy Eligibility Checking</h1>
+
+{% include "home/snippet/privacy_policy.html" %}
+
 <p>
 The following questions apply to employment contracts, including full-time or part-time employment and contract work.
 Only fill out employment information for contracts that are valid during the Outreachy internships period,
