--- a/home/templates/home/eligibility_wizard_gender.html
+++ b/home/templates/home/eligibility_wizard_gender.html
@@ -11,6 +11,9 @@ These questions are used to determine eligibility for the Outreachy internships.
 This private data will only be seen by the <a href="/contact/">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
 </p>
+
+{% include "home/snippet/privacy_policy.html" %}
+
 <p>
 When you get to the questions about your gender identity, please check all that apply.
 If you do not understand what a term means, don't check it or say yes.
