--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -15,6 +15,9 @@ Before you get started, we need to double check whether you are eligible for the
 Please fill out the following forms to check your eligibility for the Outreachy internships.
 You'll need to fill out this form for each round you apply for.
 </p>
+
+{% include "home/snippet/privacy_policy.html" %}
+
 <p>
 University and college students who are applying will need to provide information about their school calendar for their current and next terms.
 Please have that information before starting this process.
