--- a/home/templates/home/eligibility_wizard_us_demographics.html
+++ b/home/templates/home/eligibility_wizard_us_demographics.html
@@ -6,6 +6,9 @@ Are you eligible to apply to Outreachy?
 
 {% block content %}
 <h1>Outreachy Eligibility Checking</h1>
+
+{% include "home/snippet/privacy_policy.html" %}
+
 <p>
 The following question applies to U.S. citizens and permanent residents, and people living in the United States who are citizens of another country.
 </p>
