--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -3,6 +3,9 @@
 {% block content %}
 
 <h1>Submit A New Community for Review</h1>
+
+{% include "home/snippet/privacy_policy.html" %}
+
 <h2>Community Sign Up Process</h2>
 <p>
 The first step for Free and Open Source Software (FOSS) communities who want to participate Outreachy is to provide information about your community.
