--- a/home/templates/home/preview/coordinatorapproval_action.html
+++ b/home/templates/home/preview/coordinatorapproval_action.html
@@ -26,6 +26,8 @@
 	</ul>
 {% endif %}
 
+{% include "home/snippet/privacy_policy.html" %}
+
 {% include "home/snippet/action_form.html" %}
 
 {% endwith %}
