--- a/home/templates/home/preview/project_action.html
+++ b/home/templates/home/preview/project_action.html
@@ -8,7 +8,9 @@
 
 <h1>{{ view.kwargs.action|title }} Internship Project Proposal</h1>
 
-<p>Mentors submit internship project proposals, which will be reviewed by Outreachy organizers and your community coordinators.</p>
+<p>Mentors submit internship project proposals, which will be reviewed by Outreachy organizers and your community coordinators. Information will be displayed to Outreachy applicants.</p>
+
+{% include "home/snippet/privacy_policy.html" %}
 
 <h2>Terms Used</h2>
 {% include "home/snippet/foss-terms.html" %}
