--- a/home/templates/home/project_channels_form.html
+++ b/home/templates/home/project_channels_form.html
@@ -7,6 +7,9 @@ Add Project Communication Channels
 {% block content %}
 <h1>Add Project Communication Channels</h1>
 
+{% include "home/snippet/privacy_policy.html" %}
+
+
 <p>Most applicants won't be familiar with using open source
 communication channels. They may be familiar with a communication tool
 (like a mailing list) but not be aware of common open source
