--- a/contacts/templates/contact_form/contact_organizers.html
+++ b/contacts/templates/contact_form/contact_organizers.html
@@ -8,6 +8,8 @@ Contact Outreachy organizers
 
 <p>Please contact Outreachy organizers for questions relating to sponsorship, community participation, or applicant eligibility.</p>
 
+{% include "home/snippet/privacy_policy.html" %}
+
 <form method="post" action="">
 {% csrf_token %}
 
