--- a/home/templates/home/eligibility_wizard_school_terms.html
+++ b/home/templates/home/eligibility_wizard_school_terms.html
@@ -6,6 +6,9 @@ Are you eligible to apply to Outreachy?
 
 {% block content %}
 <h1>Outreachy Eligibility Checking</h1>
+
+{% include "home/snippet/privacy_policy.html" %}
+
 <p>
 Please enter information for each school term that overlaps with the Outreachy internship period,
 from <strong>{{ current_round.internstarts|date:"F d, Y" }} to {{ current_round.internends|date:"F d, Y" }}</strong>.
