--- a/home/templates/home/preview/finalapplication_action.html
+++ b/home/templates/home/preview/finalapplication_action.html
@@ -15,6 +15,9 @@
 
 {% if view.kwargs.action == 'submit' %}
 	<h2>Application Information</h2>
+
+	{% include "home/snippet/privacy_policy.html" %}
+
 {% elif view.kwargs.action == 'withdraw' %}
 	<p>We're sorry to hear you want to withdraw your application. We hope that working with Outreachy mentors and coordinators has been a good experience for you, and please <a href="/contact/">contact the Outreachy organizers</a> if you have any concerns.</p>
 {% else %}
