Remove information about volunteers on new community sign up page
We don't have that work flow set up for volunteers to help out yet.

--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -20,14 +20,12 @@ The second step (completed on the next page) will be to fill out information abo
 <p>
 Once you have completed both forms, you will be redirected to your community's call for volunteers page.
 You can send that page link to your community's mentors to get them to submit their project descriptions.
-You can also send that page link to your community volunteers who need to review Outreachy applications or otherwise help applicants.
 </p>
 
 <p>
-Both mentors and volunteers should sign up on the Outreachy website, since that grants them special permissions.
+Mentors should sign up on the Outreachy website, since that grants them special permissions.
 Mentors who sign up will be can be subscribed to the mentors mailing list, which the Outreachy organizers use to send important announcements.
 Mentors will be granted read access to applications for their project and will be notified of new applicants.
-Volunteers can be granted read access to all applications to help out with review.
 </p>
 
 <h2>Community Information</h2>
