--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -28,13 +28,44 @@ Mentors who sign up will be can be subscribed to the mentors mailing list, which
 Mentors will be granted read access to applications for their project and will be notified of new applicants.
 </p>
 
-<h2>Community Information</h2>
+<h2>Required Community Information</h2>
 <form action="" method="post">
-    {% csrf_token %}
-    {{ form.media }}
-    {{ form.as_p }}
-    <br>
-    <input class="btn btn-primary" type="submit" value="Submit Community For Review" />
+	{% csrf_token %}
+	{{ form.non_field_errors }}
+	{{ form.media }}
+	{% for field in form.visible_fields %}
+		<div class="form-group card">
+			{{ field.errors }}
+			{% if 'Long description' in field.label_tag or 'Website' in field.label_tag or 'Community size' in field.label_tag or 'Longevity' in field.label_tag or 'Goverance' in field.label_tag or 'Code of conduct' in field.label_tag or 'Cla' in field.label_tag or 'Dco' in field.label_tag %}
+				<div class="card-header">
+					{{ field.help_text|safe }}
+				</div>
+				<div class="card-body">
+					{{ field }}
+				</div>
+			{% elif 'Approved license' in field.label_tag or 'No proprietary software' in field.label_tag %}
+				<div class="card-header">
+					{{ field.label_tag }}
+				</div>
+				<div class="card-body">
+					{{ field }}
+					{{ field.help_text|safe }}
+				</div>
+			{% else %}
+				<div class="card-header">
+					{{ field.label_tag }}
+				</div>
+				<div class="card-body">
+					{{ field }}
+				</div>
+				{% if field.help_text %}
+					<div class="card-footer bg-white">{{ field.help_text|safe }}</div>
+				{% endif %}
+			{% endif %}
+		</div>
+	{% endfor %}
+	<br>
+	<input class="btn btn-primary" type="submit" value="Submit Community For Review" />
 </form>
 
 {% endblock %}
