Use month and year for round dates

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -54,7 +54,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <p>Outreachy intern projects will need to meet <a href="/mentor/mentor-faq/#define-a-project">additional Outreachy intern project requirements</a>.</p>
 
-<h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
+<h2>Timeline for {{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
 {% include "home/snippet/mentor-timeline.html" %}
 
 {% if approved_communities or pending_communities %}
